# display_app

./: build_app.sh  build_crosvm.sh  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/kancy/display_test/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/android/crosvm/: DisplayConfig.aidl  ICrosvmAndroidDisplayService.aidl
app/src/main/aidl/android/system/virtualizationservice_internal/: IVirtualizationServiceInternal.aidl
app/src/main/aidl/com/kancy/display_test/: IRootDisplayService.aidl
app/src/main/cpp/: CMakeLists.txt  virtservice_main.cpp
app/src/main/cpp/android/: binder_manager.h  binder_process.h
app/src/main/java/com/kancy/display_test/: CompanionHomeScreen.kt  Components.kt  CrosvmDisplayManager.kt  CursorHandler.kt  DiagnosticsScreen.kt  DisplayProvider.kt  EnvironmentChecker.kt  EvdevEncoder.kt  FunctionKeysPanel.kt  ImmersiveDisplay.kt  InputForwarder.kt  InputSocketHost.kt  KeyCodeMapper.kt  KeyboardMonitor.kt  LogManager.kt  MainActivity.kt  MainViewModel.kt  RootDisplayService.kt  SettingsStore.kt  SoftKeyboardInputConnection.kt  TouchScaleCalculator.kt
app/src/main/java/com/kancy/display_test/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/kancy/display_test/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
